--- a/heartbeat/heartbeat.reference.yml
+++ b/heartbeat/heartbeat.reference.yml
@@ -509,6 +509,14 @@ heartbeat.scheduler:
 #    max_bytes: 1024
 #    fail_on_error: false
 #    ignore_missing: true
+#
+# The following example decodes CSV-encoded data found in the message field
+# into an array under the csv field.
+#
+#processors:
+#- decode_csv_field:
+#    field: message
+#    separator: ','
 
 #============================= Elastic Cloud ==================================
 
