Add add_lxc_metadata processor examples to reference config files

--- a/heartbeat/heartbeat.reference.yml
+++ b/heartbeat/heartbeat.reference.yml
@@ -449,6 +449,12 @@ heartbeat.scheduler:
 #processors:
 #- add_docker_metadata: ~
 #
+# The following example enriches each event with LXC container metadata using
+# process IDs included in the event.
+#
+#processors:
+#- add_lxc_metadata: ~
+#
 # The following example enriches each event with host metadata.
 #
 #processors:
