--- a/x-pack/functionbeat/functionbeat.reference.yml
+++ b/x-pack/functionbeat/functionbeat.reference.yml
@@ -338,6 +338,12 @@ functionbeat.provider.aws.functions:
 #processors:
 #- add_docker_metadata: ~
 #
+# The following example enriches each event with LXC container metadata using
+# process IDs included in the event.
+#
+#processors:
+#- add_lxc_metadata: ~
+#
 # The following example enriches each event with host metadata.
 #
 #processors:
