--- a/filebeat/filebeat.reference.yml
+++ b/filebeat/filebeat.reference.yml
@@ -1024,6 +1024,12 @@ filebeat.inputs:
 #processors:
 #- add_docker_metadata: ~
 #
+# The following example enriches each event with LXC container metadata using
+# process IDs included in the event.
+#
+#processors:
+#- add_lxc_metadata: ~
+#
 # The following example enriches each event with host metadata.
 #
 #processors:
