--- a/journalbeat/journalbeat.reference.yml
+++ b/journalbeat/journalbeat.reference.yml
@@ -245,6 +245,12 @@ setup.template.settings:
 #processors:
 #- add_docker_metadata: ~
 #
+# The following example enriches each event with LXC container metadata using
+# process IDs included in the event.
+#
+#processors:
+#- add_lxc_metadata: ~
+#
 # The following example enriches each event with host metadata.
 #
 #processors:
