Adjust value of `output_format`.

--- a/libbeat/_meta/fields.ecs.yml
+++ b/libbeat/_meta/fields.ecs.yml
@@ -613,7 +613,7 @@
       type: long
       format: duration
       input_format: nanoseconds
-      output_format: milliseconds
+      output_format: asMilliseconds
       output_precision: 1
       description: 'Duration of the event in nanoseconds.
 
