Add both json and plaintext processing pipelines

--- a/x-pack/filebeat/module/envoyproxy/_meta/fields.yml
+++ b/x-pack/filebeat/module/envoyproxy/_meta/fields.yml
@@ -15,15 +15,18 @@
 
     - name: response_flags
       type: keyword
+      description: >
+        Response flags
 
     - name: upstream_service_time
       type: double
+      description: >
+        Upstream service time
 
     - name: request_id
       type: keyword
-
-    - name: authority
-      type: keyword
+      description: >
+        ID of the request
 
 
         
