--- a/x-pack/filebeat/module/envoyproxy/_meta/fields.yml
+++ b/x-pack/filebeat/module/envoyproxy/_meta/fields.yml
@@ -19,9 +19,11 @@
         Response flags
 
     - name: upstream_service_time
-      type: double
+      type: long
+      format: duration
+      input_format: nanoseconds
       description: >
-        Upstream service time
+        Upstream service time in nanoseconds
 
     - name: request_id
       type: keyword
