Consolidate and simplify pipelines

--- a/x-pack/filebeat/module/envoyproxy/_meta/fields.yml
+++ b/x-pack/filebeat/module/envoyproxy/_meta/fields.yml
@@ -30,5 +30,10 @@
       description: >
         ID of the request
 
+    - name: authority
+      type: keyword
+      description: >
+        Envoy proxy authority field
+
 
         
