Add proxy_type field. Add overview dashboard

--- a/x-pack/filebeat/module/envoyproxy/_meta/fields.yml
+++ b/x-pack/filebeat/module/envoyproxy/_meta/fields.yml
@@ -35,5 +35,11 @@
       description: >
         Envoy proxy authority field
 
+    - name: proxy_type
+      type: keyword
+      description: >
+        Envoy proxy type, tcp or http
+
+
 
         
