--- a/metricbeat/module/system/raid/_meta/fields.yml
+++ b/metricbeat/module/system/raid/_meta/fields.yml
@@ -20,6 +20,10 @@
       type: long
       description: >
          Number of active disks.
+    - name: disks.Unknown
+      type: long
+      description: >
+         Number of disks in a state that does not belong to any other category
     - name: disks.total
       type: long
       description: >
