move go metrics to what seems to be a better namespace

--- a/metricbeat/module/coredns/stats/_meta/fields.yml
+++ b/metricbeat/module/coredns/stats/_meta/fields.yml
@@ -108,7 +108,7 @@
       type: long
       description: >
         Running threads count
-    - name: runtime.process.go.routines.count
+    - name: runtime.go.routines.count
       type: long
       description: >
         Running Go routines count
