add raid level to metricset

--- a/metricbeat/module/system/raid/_meta/fields.yml
+++ b/metricbeat/module/system/raid/_meta/fields.yml
@@ -12,6 +12,10 @@
       type: keyword
       description: >
         activity-state of the device.
+    - name: level
+      type: keyword
+      description: >
+        The raid level of the device
     - name: sync_action
       type: keyword
       description: >
