Leave old paths in place for max. version compat

--- a/filebeat/module/elasticsearch/audit/manifest.yml
+++ b/filebeat/module/elasticsearch/audit/manifest.yml
@@ -4,12 +4,15 @@ var:
   - name: paths
     default:
       - /var/log/elasticsearch/*_access.log
+      - /var/log/elasticsearch/*_audit.log
       - /var/log/elasticsearch/*_audit.json
     os.darwin:
       - /usr/local/var/lib/elasticsearch/*_access.log
+      - /usr/local/var/lib/elasticsearch/*_audit.log
       - /usr/local/var/lib/elasticsearch/*_audit.json
     os.windows:
       - c:/ProgramData/Elastic/Elasticsearch/logs/*_access.log
+      - c:/ProgramData/Elastic/Elasticsearch/logs/*_audit.log
       - c:/ProgramData/Elastic/Elasticsearch/logs/*_audit.json
   - name: convert_timezone
     default: false
