--- a/metricbeat/module/kafka/docker-compose.yml
+++ b/metricbeat/module/kafka/docker-compose.yml
@@ -7,5 +7,8 @@ services:
       context: ./_meta
       args:
         KAFKA_VERSION: ${KAFKA_VERSION:-2.0.0}
+    environment:
+      # Needed by now
+      KAFKA_ADVERTISED_HOST: "kafka:9092"
     ports:
     - 9092
