Implement get_hosts in the base class

--- a/metricbeat/docker-compose.yml
+++ b/metricbeat/docker-compose.yml
@@ -76,6 +76,8 @@ services:
 
   coredns:
     build: ./module/coredns/_meta
+    ports:
+      - 9153
 
   couchbase:
     build: ./module/couchbase/_meta
