--- a/metricbeat/docker-compose.yml
+++ b/metricbeat/docker-compose.yml
@@ -177,8 +177,7 @@ services:
       file: ./module/kafka/docker-compose.yml
       service: kafka
     environment:
-      # Needed for python tests
-      KAFKA_ADVERTISED_HOST_AUTO: "yes"
+      KAFKA_ADVERTISED_HOST: ""
     ports:
       - 9092
 
@@ -187,8 +186,7 @@ services:
       file: ./module/kafka/docker-compose.yml
       service: kafka
     environment:
-      # Needed for python tests
-      KAFKA_ADVERTISED_HOST_AUTO: "yes"
+      KAFKA_ADVERTISED_HOST: ""
     build:
       context: ./module/kafka/_meta
       args:
@@ -201,8 +199,7 @@ services:
       file: ./module/kafka/docker-compose.yml
       service: kafka
     environment:
-      # Needed for python tests
-      KAFKA_ADVERTISED_HOST_AUTO: "yes"
+      KAFKA_ADVERTISED_HOST: ""
     build:
       context: ./module/kafka/_meta
       args:
