--- a/x-pack/metricbeat/module/aws/cloudwatch/_meta/fields.yml
+++ b/x-pack/metricbeat/module/aws/cloudwatch/_meta/fields.yml
@@ -4,17 +4,17 @@
     `cloudwatch` contains the metrics that were scraped from AWS CloudWatch which contains monitoring metrics sent by different namespaces.
   release: beta
   fields:
-    - name: cloudwatch.namespace
+    - name: namespace
       type: keyword
       description: >
         The namespace specified when query cloudwatch api.
-    - name: cloudwatch.metrics.*
+    - name: metrics.*
       type: object
       object_type: double
       object_type_mapping_type: "*"
       description: >
         Metrics that returned from Cloudwatch api query.
-    - name: cloudwatch.dimensions.*
+    - name: dimensions.*
       type: object
       object_type: keyword
       object_type_mapping_type: "*"
