--- a/heartbeat/heartbeat.yml
+++ b/heartbeat/heartbeat.yml
@@ -22,15 +22,9 @@ heartbeat.config.monitors:
 # Configure monitors inline
 heartbeat.monitors:
 - type: http
-
-  # List or urls to query
-  urls: ["http://localhost:9200"]
-
-  # Configure task schedule
+  urls: ["http://elastic.co:9200"]
+  mode: all
   schedule: '@every 10s'
-
-  # Total test connection and data exchange timeout
-  #timeout: 16s
 
 #==================== Elasticsearch template setting ==========================
 
