--- a/x-pack/metricbeat/metricbeat.reference.yml
+++ b/x-pack/metricbeat/metricbeat.reference.yml
@@ -175,6 +175,8 @@ metricbeat.modules:
   secret_access_key: '${AWS_SECRET_ACCESS_KEY:""}'
   session_token: '${AWS_SESSION_TOKEN:""}'
   default_region: '${AWS_REGION:us-west-1}'
+  #regions:
+  #  - us-west-1
 - module: aws
   period: 300s
   metricsets:
@@ -190,6 +192,9 @@ metricbeat.modules:
         - name: InstanceId
           value: i-0686946e22cf9494a
     - namespace: AWS/EBS
+  #regions:
+  #  - us-east-1
+  #  - us-east-2
 
 #--------------------------------- Ceph Module ---------------------------------
 - module: ceph
