Whitespace in docs.

--- a/x-pack/auditbeat/auditbeat.reference.yml
+++ b/x-pack/auditbeat/auditbeat.reference.yml
@@ -136,7 +136,7 @@ auditbeat.modules:
   # user.state.period: 12h
 
   # Disabled by default. If enabled, the socket dataset will
-  # report local connections.
+  # report sockets to and from localhost.
   # socket.include_localhost: false
 
   # Enabled by default. Auditbeat will read password fields in
