--- a/libbeat/_meta/config.reference.yml
+++ b/libbeat/_meta/config.reference.yml
@@ -1063,7 +1063,7 @@ logging.files:
 
   # Rotate existing logs on startup rather than appending to the existing
   # file. Defaults to true.
-  # rotateonopen: true
+  # rotateonstartup: true
 
 # Set to true to log messages in JSON format.
 #logging.json: false
