--- a/metricbeat/metricbeat.reference.yml
+++ b/metricbeat/metricbeat.reference.yml
@@ -1789,7 +1789,7 @@ logging.files:
 
   # Rotate existing logs on startup rather than appending to the existing
   # file. Defaults to true.
-  # rotateonopen: true
+  # rotateonstartup: true
 
 # Set to true to log messages in JSON format.
 #logging.json: false
