--- a/packetbeat/packetbeat.reference.yml
+++ b/packetbeat/packetbeat.reference.yml
@@ -1543,7 +1543,7 @@ logging.files:
 
   # Rotate existing logs on startup rather than appending to the existing
   # file. Defaults to true.
-  # rotateonopen: true
+  # rotateonstartup: true
 
 # Set to true to log messages in JSON format.
 #logging.json: false
