--- a/x-pack/auditbeat/auditbeat.reference.yml
+++ b/x-pack/auditbeat/auditbeat.reference.yml
@@ -1210,7 +1210,7 @@ logging.files:
 
   # Rotate existing logs on startup rather than appending to the existing
   # file. Defaults to true.
-  # rotateonopen: true
+  # rotateonstartup: true
 
 # Set to true to log messages in JSON format.
 #logging.json: false
