[Auditbeat] Socket dataset: Exclude localhost by default (#11993)
Adds a new configuration option `socket.include_localhost` to control if sockets from or to localhost/loopback should be included. Defaults to `false` to reduce the large amount of data the dataset produces.

Some improvements to tests and docs changes as well.

This is a breaking change.

--- a/x-pack/auditbeat/auditbeat.reference.yml
+++ b/x-pack/auditbeat/auditbeat.reference.yml
@@ -135,6 +135,10 @@ auditbeat.modules:
   # socket.state.period: 12h
   # user.state.period: 12h
 
+  # Disabled by default. If enabled, the socket dataset will
+  # report sockets to and from localhost.
+  # socket.include_localhost: false
+
   # Enabled by default. Auditbeat will read password fields in
   # /etc/passwd and /etc/shadow and store a hash locally to
   # detect any changes.
