--- a/x-pack/filebeat/filebeat.reference.yml
+++ b/x-pack/filebeat/filebeat.reference.yml
@@ -429,6 +429,16 @@ filebeat.modules:
     # can be added under this section.
     #input:
 
+#------------------------------- RabbitMQ Module -------------------------------
+#- module: rabbitmq
+  # All logs
+  #log:
+    # enabled: true
+
+    # Set custom paths for the log files. If left empty,
+    # Filebeat will choose the paths depending on your OS.
+    #var.paths: ["/var/log/rabbitmq/rabbit@localhost.log*"]
+
 #-------------------------------- Redis Module --------------------------------
 #- module: redis
   # Main logs
