--- a/metricbeat/module/system/socket_summary/_meta/fields.yml
+++ b/metricbeat/module/system/socket_summary/_meta/fields.yml
@@ -23,19 +23,20 @@
       description: >
         All TCP connections
       fields:
-        - name: orphan_sockets
+        - name: memory
           type: integer
+          format: bytes
           description: >
-            A count of all orphaned tcp sockets. Only available on Linux.
-        - name: socket_memory
-          type: integer
-          description: >
-            Memory used by TCP sockets. Corresponds to limits set in /proc/sys/net/ipv4/tcp_mem. Only available on linux. 
+            Memory used by TCP sockets in bytes, based on number of allocated pages and system page size. Corresponds to limits set in /proc/sys/net/ipv4/tcp_mem. Only available on Linux. 
         - name: all
           type: group
           description: >
             All TCP connections
           fields:
+            - name: orphaned
+              type: integer
+              description: >
+                A count of all orphaned tcp sockets. Only available on Linux.
             - name: count
               type: integer
               description: >
