--- a/metricbeat/module/system/socket_summary/_meta/fields.yml
+++ b/metricbeat/module/system/socket_summary/_meta/fields.yml
@@ -62,6 +62,11 @@
       description: >
         All UDP connections
       fields:
+        - name: memory
+          type: integer
+          format: bytes
+          description: >
+            Memory used by UDP sockets in bytes, based on number of allocated pages and system page size. Corresponds to limits set in /proc/sys/net/ipv4/udp_mem. Only available on Linux. 
         - name: all
           type: group
           description: >
