--- a/x-pack/filebeat/filebeat.reference.yml
+++ b/x-pack/filebeat/filebeat.reference.yml
@@ -313,6 +313,20 @@ filebeat.modules:
     # can be added under this section.
     #input:
 
+#-------------------------------- Mssql Module --------------------------------
+#- module: mssql
+  # Access logs
+  #access:
+    #enabled: true
+
+    # Set custom paths for the log files. If left empty,
+    # Filebeat will choose the paths depending on your OS.
+    #var.paths:
+
+    # Input configuration (advanced). Any input configuration option
+    # can be added under this section.
+    #input:
+
 #-------------------------------- MySQL Module --------------------------------
 #- module: mysql
   # Error logs
