change field name of orphan sockets, update test

--- a/metricbeat/module/system/socket_summary/_meta/fields.yml
+++ b/metricbeat/module/system/socket_summary/_meta/fields.yml
@@ -33,7 +33,7 @@
           description: >
             All TCP connections
           fields:
-            - name: orphaned
+            - name: orphan
               type: integer
               description: >
                 A count of all orphaned tcp sockets. Only available on Linux.
