--- a/.travis.yml
+++ b/.travis.yml
@@ -191,7 +191,7 @@ addons:
       - libpcap-dev
       - xsltproc
       - libxml2-utils
-      - libsystemd-journal-dev
+      - libsystemd-dev
       - librpm-dev
 
 before_install:
