--- a/.travis.yml
+++ b/.travis.yml
@@ -19,183 +19,51 @@ env:
 
 jobs:
   include:
-    # General checks
-    - os: linux
-      env: TARGETS="check"
-      go: $TRAVIS_GO_VERSION
-      stage: check
-
-    # Filebeat
-    - os: linux
-      env: TARGETS="-C filebeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: osx
-      env: TARGETS="TEST_ENVIRONMENT=0 -C filebeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: TARGETS="-C x-pack/filebeat testsuite"
-      go: $(GO_VERSION)
-      stage: test
-
-    # Heartbeat
-    - os: linux
-      env: TARGETS="-C heartbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: osx
-      env: TARGETS="TEST_ENVIRONMENT=0 -C heartbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
-    # Auditbeat
-    - os: linux
-      env: TARGETS="-C auditbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: osx
-      env: TARGETS="TEST_ENVIRONMENT=0 -C auditbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: TARGETS="-C auditbeat crosscompile"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: TARGETS="-C x-pack/auditbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
-    # Libbeat
-    - os: linux
-      env: TARGETS="-C libbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: TARGETS="-C libbeat crosscompile"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: STRESS_TEST_OPTIONS="-timeout=20m -race -v -parallel 1" TARGETS="-C libbeat stress-tests"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: TARGETS="-C x-pack/libbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
-    # Metricbeat
-    - os: linux
-      env: TARGETS="-C metricbeat unit-tests coverage-report"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: TARGETS="-C metricbeat integration-tests-environment coverage-report"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: TARGETS="-C metricbeat update system-tests-environment coverage-report"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
-    - os: osx
-      env: TARGETS="TEST_ENVIRONMENT=0 -C metricbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: TARGETS="-C metricbeat crosscompile"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: TARGETS="-C x-pack/metricbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
-    # Packetbeat
-    - os: linux
-      env: TARGETS="-C packetbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
-    # Winlogbeat
-    - os: linux
-      env: TARGETS="-C winlogbeat crosscompile"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
-    # Functionbeat
-    - os: linux
-      env: TARGETS="-C x-pack/functionbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: osx
-      env: TARGETS="TEST_ENVIRONMENT=0 -C x-pack/functionbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
-    # Journalbeat
-    - os: linux
-      env: TARGETS="-C journalbeat testsuite"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
-    # Generators
-    - os: linux
-      env: TARGETS="-C generator/metricbeat test"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-    - os: linux
-      env: TARGETS="-C generator/beat test"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
-    # Docs
-    - os: linux
-      env: TARGETS="docs"
-      go: $TRAVIS_GO_VERSION
-      stage: test
-
     # Kubernetes
     - os: linux
+      stage: test
       before_script:
         # install dind kubernetes
         - wget https://github.com/kubernetes-sigs/kubeadm-dind-cluster/releases/download/v0.1.0/dind-cluster-v1.13.sh
-        - chmod +x dind-cluster-v1.10.sh
-        - ./dind-cluster-v1.10.sh up
+        - chmod +x dind-cluster-v1.13.sh
+        - ./dind-cluster-v1.13.sh up
         # Add Kubectl directory to the PATH.
         - export PATH="$HOME/.kubeadm-dind-cluster:$PATH"
         # Wait for Kubernetes to be up and ready.
         - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
-      stage: test
       env:
         - TARGETS="-C deploy/kubernetes test"
 
     - os: linux
-      install: deploy/kubernetes/.travis/setup.sh
+      stage: test
+      before_script:
+        # Download and install kubectl (optional)
+        - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.12.0/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
+        # Download and install kind using cURL
+        - curl -Lo kind https://github.com/kubernetes-sigs/kind/releases/download/0.0.1/kind-linux-amd64 && chmod +x kind && sudo mv kind /usr/local/bin/
+        # Create a new Kubernetes cluster using kind
+        - kind create cluster
+        # Set KUBECONFIG environment variable
+        - export KUBECONFIG=“$(kind get kubeconfig-path)”
       env:
         - TARGETS="-C deploy/kubernetes test"
-        - TRAVIS_K8S_VERSION=v1.8.0
-      stage: test
+
     - os: linux
-      install: deploy/kubernetes/.travis/setup.sh
+      dist: xenial
+      stage: test
+      addons:
+        snaps:
+          - name: microk8s
+            classic: true
+            channel: stable
+      before_script:
+        - microk8s.start
+        - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.13.0/bin/linux/amd64/kubectl && \
+    chmod +x kubectl && sudo mv kubectl /usr/local/bin/
       env:
         - TARGETS="-C deploy/kubernetes test"
-        - TRAVIS_K8S_VERSION=v1.9.4
-      stage: test
-    - os: linux
-      install: deploy/kubernetes/.travis/setup.sh
-      env:
-        - TARGETS="-C deploy/kubernetes test"
-        - TRAVIS_K8S_VERSION=v1.10.0
-      stage: test
-    # TODO include 1.11 once minikube supports it
-    #- os: linux
-    #  install: deploy/kubernetes/.travis/setup.sh
-    #  env:
-    #    - TARGETS="-C deploy/kubernetes test"
-    #    - TRAVIS_K8S_VERSION=v1.11.0
-    #  stage: test
+
+
 
 addons:
   apt:
