Rename fileset from `log` to `pan_os`

--- a/x-pack/filebeat/filebeat.reference.yml
+++ b/x-pack/filebeat/filebeat.reference.yml
@@ -405,7 +405,7 @@ filebeat.modules:
 
 #------------------------------ Palo_alto Module ------------------------------
 - module: palo_alto
-  log:
+  pan_os:
     enabled: true
 
     # Set which input to use between syslog (default) or file.
