--- a/x-pack/filebeat/module/palo_alto/pan_os/config/input.yml
+++ b/x-pack/filebeat/module/palo_alto/pan_os/config/input.yml
@@ -49,25 +49,25 @@ processors:
         source.ip: 7
         server.ip: 8
         destination.ip: 8
-        palo_alto.source.nat.ip: 9
-        palo_alto.destination.nat.ip: 10
-        palo_alto.ruleset: 11
+        palo_alto.pan_os.source.nat.ip: 9
+        palo_alto.pan_os.destination.nat.ip: 10
+        palo_alto.pan_os.ruleset: 11
         client.user.name: 12
         source.user.name: 12
         server.user.name: 13
         destination.user.name: 13
         network.application: 14
-        palo_alto.source.zone: 16
-        palo_alto.destination.zone: 17
-        palo_alto.source.interface: 18
-        palo_alto.destination.interface: 19
-        palo_alto.flow_id: 22
+        palo_alto.pan_os.source.zone: 16
+        palo_alto.pan_os.destination.zone: 17
+        palo_alto.pan_os.source.interface: 18
+        palo_alto.pan_os.destination.interface: 19
+        palo_alto.pan_os.flow_id: 22
         client.port: 24
         source.port: 24
         destination.port: 25
         server.port: 25
-        palo_alto.source.nat.port: 26
-        palo_alto.destination.nat.port: 27
+        palo_alto.pan_os.source.nat.port: 26
+        palo_alto.pan_os.destination.nat.port: 27
         _temp_.labels: 28
         network.transport: 29
         event.outcome: 30
@@ -79,8 +79,8 @@ processors:
         network.packets: 34
         event.start: 35
         event.duration: 36
-        palo_alto.url.category: 37
-        palo_alto.sequence_number: 39
+        palo_alto.pan_os.url.category: 37
+        palo_alto.pan_os.sequence_number: 39
         server.packets: 44
         destination.packets: 44
         client.packets: 45
@@ -100,44 +100,44 @@ processors:
         source.ip: 7
         server.ip: 8
         destination.ip: 8
-        palo_alto.source.nat.ip: 9
-        palo_alto.destination.nat.ip: 10
-        palo_alto.ruleset: 11
+        palo_alto.pan_os.source.nat.ip: 9
+        palo_alto.pan_os.destination.nat.ip: 10
+        palo_alto.pan_os.ruleset: 11
         client.user.name: 12
         source.user.name: 12
         server.user.name: 13
         destination.user.name: 13
         network.application: 14
-        palo_alto.source.zone: 16
-        palo_alto.destination.zone: 17
-        palo_alto.source.interface: 18
-        palo_alto.destination.interface: 19
-        palo_alto.flow_id: 22
+        palo_alto.pan_os.source.zone: 16
+        palo_alto.pan_os.destination.zone: 17
+        palo_alto.pan_os.source.interface: 18
+        palo_alto.pan_os.destination.interface: 19
+        palo_alto.pan_os.flow_id: 22
         client.port: 24
         source.port: 24
         destination.port: 25
         server.port: 25
-        palo_alto.source.nat.port: 26
-        palo_alto.destination.nat.port: 27
+        palo_alto.pan_os.source.nat.port: 26
+        palo_alto.pan_os.destination.nat.port: 27
         _temp_.labels: 28
         network.transport: 29
         event.outcome: 30
-        palo_alto.threat_file_or_url: 31
+        palo_alto.pan_os.threat_file_or_url: 31
         url.original: 31
-        palo_alto.threat_id: 32
-        palo_alto.url.category: 33
+        palo_alto.pan_os.threat_id: 32
+        palo_alto.pan_os.url.category: 33
         log.level: 34
         _temp_.direction: 35
         source.geo.country_iso_code: 38
         destination.geo.country_iso_code: 39
-        palo_alto.network.pcap_id: 42
-        palo_alto.file.hash: 43
+        palo_alto.pan_os.network.pcap_id: 42
+        palo_alto.pan_os.file.hash: 43
         user_agent.original: 46
         file.type: 47
         network.forwarded_ip: 48
         http.request.referer: 49
         source.user.email: 50
-        palo_alto.subject: 51
+        palo_alto.pan_os.subject: 51
         destination.user.email: 52
         observer.hostname: 59
 
@@ -148,9 +148,9 @@ processors:
   - community_id: ~
 
   - community_id:
-      target: palo_alto.network.nat.community_id
+      target: palo_alto.pan_os.network.nat.community_id
       fields:
-        source_ip: palo_alto.source.nat.ip
-        source_port: palo_alto.source.nat.port
-        destination_ip: palo_alto.destination.nat.ip
-        destination_port: palo_alto.destination.nat.port
+        source_ip: palo_alto.pan_os.source.nat.ip
+        source_port: palo_alto.pan_os.source.nat.port
+        destination_ip: palo_alto.pan_os.destination.nat.ip
+        destination_port: palo_alto.pan_os.destination.nat.port
