Refactor threat fields
- Rename threat_file_or_url to threat.resource
- Split threat_id into threat.id and threat.name
- Populate threat.name for common URL-filtering event.

--- a/x-pack/filebeat/module/palo_alto/pan_os/_meta/fields.yml
+++ b/x-pack/filebeat/module/palo_alto/pan_os/_meta/fields.yml
@@ -113,12 +113,17 @@
         Log entry identifier that is incremented sequentially.
         Unique for each log type.
 
-    - name: threat_file_or_url
+    - name: threat.resource
       type: keyword
       description: >
         URL or file name for a threat.
 
-    - name: threat_id
+    - name: threat.id
       type: keyword
       description: >
         Palo Alto Networks identifier for the threat.
+
+    - name: threat.name
+      type: keyword
+      description: >
+        Palo Alto Networks name for the threat.
