--- a/x-pack/filebeat/module/palo_alto/pan_os/ingest/pipeline.yml
+++ b/x-pack/filebeat/module/palo_alto/pan_os/ingest/pipeline.yml
@@ -316,6 +316,18 @@ processors:
      value:
       - '{{palo_alto.pan_os.network.nat.community_id}}'
 
+ - grok:
+     if: 'ctx?.palo_alto?.pan_os?.threat?.name != null'
+     field: palo_alto.pan_os.threat.name
+     ignore_failure: true
+     patterns:
+       - '%{GREEDYDATA:palo_alto.pan_os.threat.name}\(\s*%{GREEDYDATA:palo_alto.pan_os.threat.id}\s*\)'
+
+ - set:
+     field: palo_alto.pan_os.threat.name
+     value: 'URL-filtering'
+     if: 'ctx?.palo_alto?.pan_os?.threat?.id == "9999"'
+
 # Remove temporary fields.
  - remove:
      field:
