Remove not needed step in the processor

--- a/x-pack/filebeat/filebeat.reference.yml
+++ b/x-pack/filebeat/filebeat.reference.yml
@@ -314,21 +314,14 @@ filebeat.modules:
     #input:
 
 #-------------------------------- Mssql Module --------------------------------
-#- module: mssql
-  # Access logs
-  #access:
-    #enabled: true
+- module: mssql
+  # Fileset for native deployment
+  log:
+    enabled: true
 
     # Set custom paths for the log files. If left empty,
     # Filebeat will choose the paths depending on your OS.
     #var.paths:
-
-    # Input configuration (advanced). Any input configuration option
-    # can be added under this section.
-    #input:
-
-    # Convert the timestamp to UTC. Requires Elasticsearch >= 6.1.
-    #var.convert_timezone: false
 
 #-------------------------------- MySQL Module --------------------------------
 #- module: mysql
