Use proper shared field definition for shorewall
I followed NATS example, so that here I define the parent field froup (shorewall)
and the children fields will be defined at the fileset level

--- a/x-pack/filebeat/module/shorewall/_meta/fields.yml
+++ b/x-pack/filebeat/module/shorewall/_meta/fields.yml
@@ -1,4 +1,10 @@
 - key: shorewall
   title: "shorewall"
   description: >
-    shorewall Module
+    Module for parsing Shorewall log files.
+  fields:
+    - name: shorewall
+      type: group
+      description: >
+        Fields from Shorewall logs.
+      fields:
